# MultitoolV2

./: README.md
.github/workflows/: ci.yml  release.yml
scripts/: build-release.sh
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/scripts/: cache_functions.rs  gamepath.rs  gamepath_preferences.rs  local_characters_functions.rs  mod.rs  startup_manager.rs  translation_functions.rs
src/components/custom/: app-sidebar.tsx
src/components/custom/local-characters-presets/: columns.tsx
src/hooks/: useGamePaths.ts  usePlatform.ts
src/pages/: ClearCache.tsx  LocalCharactersPresets.tsx  Traduction.tsx
